# rmcp-xdotool

./: Cargo.toml  README.md
src/: main.rs
